BAP-2417: Collapsed scroll spy item styling fixed

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/scrollspy.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/scrollspy.less
@@ -6,8 +6,8 @@
   display: none;
 }
 
-.scrollspy .in {
-  padding-top: 10px;
+.scrollspy .accordion-body > fieldset {
+  margin-top: 10px;
 }
 
 .scrollspy .accordion-group {
